<resources>
    <string name="app_name">NO Premium</string>
    <string name="btnLogin">Login</string>
    <string name="txtUser">Email</string>
    <string name="hint_user">Email</string>
    <string name="txtSenha">Password</string>
    <string name="hint_senha">Inform your password</string>
    <string name="botao_login">Login</string>
    <string name="botao_cadastrar">Create a New Account</string>
    <string name="txt_service">Free Trial Service</string>
    <string name="txt_time">Free Time</string>
    <string name="txt_date">Subscription Date</string>
    <string name="hint_date">DD/MM/AAAA</string>
    <string name="hint_time">Ex.: 1 month</string>
    <string name="hint_service">Ex.: Service you wont pay for use</string>
    <string name="ckb_conectado">Keep conected</string>
    <string name="txtSubscUser">Still doesent have an account? Create now!</string>
    <string name="bt_salvar_assinatura">Save</string>
    <string name="txtDocumento">Document</string>
    <string name="hint_documento">CPF/CNPJ</string>
    <string name="txtPhone">Phone Number</string>
    <string name="hint_phone">(00) 00000-0000</string>
    <string name="txtFullName">Full Name</string>
    <string name="genericError">Unexpected error. Please, try again later.</string>
    <string name="loginError">Please, confirm your login details and try again.</string>
    <string name="signupError">Please, verify your input information and try again.</string>
    <string name="emailNotVerifiedError">Please verify your email address.</string>
    <string name="appbar_scrolling_view_behavior">AppBarLayout.ScrollingViewBehavior</string>
    <string name="deleteSuccess">The item was successfully deleted.</string>
    <string name="deleteError">Sorry, I could not delete this item.</string>
    <string name="createError">Error inserting this subscription</string>
</resources>